--- a/css/custom.css
+++ b/css/custom.css
@@ -174,3 +174,10 @@ span.error {
     width: 100%;
     height: 100%;
 }
+
+.buildn {
+  text-align: right;
+  font-size:1em;
+  color: rgb(192,192,192);
+
+}
