--- a/css/custom.css
+++ b/css/custom.css
@@ -52,17 +52,12 @@ html {
 
 .navbar-nav >li > a:focus, .navbar-inverse .navbar-nav>li>a:hover {
 	background-color:transparent;
-	color:green !important;
+	color: #2B3E85 !important;
 }
 
-.navbar-inverse .navbar-brand:focus, .navbar-inverse .navbar-brand:hover {
-	color:green;
-}
 
-.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:focus, .navbar-inverse .navbar-nav > .open > a:hover {
-	background-color: orange;
-	color:red;
-}
+
+
 
 @media screen and (max-width: 767px) {
 .navbar-nav {
@@ -186,5 +181,26 @@ span.error {
 a.dropdown-toggle.navcol {
 
 color: #2B3E85 !important ;
+
+}
+
+.navcol:hover {
+
+  background-color: #eee;
+
+}
+
+li.dropdown:hover {
+
+  background-color: #eee;
+}
+
+.navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:focus, .navbar-inverse .navbar-nav>.open>a:hover {
+  background-color: #eee;
+
+}
+
+.headers {
+  color: #21409A;
 
 }
