--- a/css/custom.css
+++ b/css/custom.css
@@ -76,9 +76,12 @@ html {
 .nav .dropdown-toggle .caret { /*removes caret*/
 }
 
+
 .dropdown:hover .dropdown-menu{  /*Hover Dropwdown menu*/
     display: block;
+
  }
+
 
  #image {
      width: 100%;
@@ -199,6 +202,37 @@ li.dropdown:hover {
 .navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:focus, .navbar-inverse .navbar-nav>.open>a:hover {
   background-color: #eee;
 
+}
+
+@media (max-width: 767px) {
+.navbar-nav .open .dropdown-menu {
+background-color: #fff;
+font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+line-height: 1.42857143;
+color: #333 !important;
+
+position: absolute;
+top: 100%;
+left: 0;
+z-index: 1000;
+display: none;
+float: left;
+min-width: 160px;
+padding: 5px 0;
+margin: 2px 0 0;
+font-size: 14px;
+text-align: left;
+list-style: none;
+background-color: #fff;
+-webkit-background-clip: padding-box;
+background-clip: padding-box;
+border: 1px solid #ccc;
+border: 1px solid rgba(0,0,0,.15);
+border-radius: 4px;
+-webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
+box-shadow: 0 6px 12px rgba(0,0,0,.175);
+
+}
 }
 
 .headers {
