--- a/css/custom.css
+++ b/css/custom.css
@@ -18,7 +18,7 @@ html {
 	height:400px;
 	background-color: #CCC;
 }
-
+/* Navigation Bar */
 .navbar-nav{
 	float: right;
 }
@@ -69,15 +69,10 @@ html {
     margin-top:15px;
 }
 
-.nav .dropdown-toggle .caret { /*removes caret*/
-}
-
-
 .dropdown:hover .dropdown-menu{  /*Hover Dropwdown menu*/
     display: block;
 
  }
-
 
  #image {
      width: 100%;
@@ -109,7 +104,6 @@ html {
 .carousel:hover .carousel-control {
 	visibility: visible;
 }
-
 
 .small-footer {
 	text-align: center;
@@ -179,56 +173,48 @@ span.error {
 }
 
 a.dropdown-toggle.navcol {
-
 color: #2B3E85 !important ;
-
 }
 
 .navcol:hover {
-
   background-color: #eee;
-
 }
 
 li.dropdown:hover {
-
   background-color: #eee;
 }
 
 .navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:focus, .navbar-inverse .navbar-nav>.open>a:hover {
   background-color: #eee;
-
 }
 
 @media (max-width: 767px) {
-.navbar-nav .open .dropdown-menu {
-background-color: #fff;
-font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-line-height: 1.42857143;
-color: #333 !important;
-
-position: absolute;
-top: 100%;
-left: 0;
-z-index: 1000;
-display: none;
-float: left;
-min-width: 160px;
-padding: 5px 0;
-margin: 2px 0 0;
-font-size: 14px;
-text-align: left;
-list-style: none;
-background-color: #fff;
--webkit-background-clip: padding-box;
-background-clip: padding-box;
-border: 1px solid #ccc;
-border: 1px solid rgba(0,0,0,.15);
-border-radius: 4px;
--webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
-box-shadow: 0 6px 12px rgba(0,0,0,.175);
-
-}
+  .navbar-nav .open .dropdown-menu {
+    background-color: #fff;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    line-height: 1.42857143;
+    color: #333 !important;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1000;
+    display: none;
+    float: left;
+    min-width: 160px;
+    padding: 5px 0;
+    margin: 2px 0 0;
+    font-size: 14px;
+    text-align: left;
+    list-style: none;
+    background-color: #fff;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    border: 1px solid #ccc;
+    border: 1px solid rgba(0,0,0,.15);
+    border-radius: 4px;
+    -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
+    box-shadow: 0 6px 12px rgba(0,0,0,.175);
+  }
 }
 
 .headers {
