--- a/css/custom.css
+++ b/css/custom.css
@@ -269,7 +269,7 @@ input[type="radio"] {
 }
 
 .panel {
-  background-color: #f5f5f5 ;
+  background-color: #f5f5f5;
 }
 
 .panel-body {
@@ -321,4 +321,21 @@ input[type="radio"] {
   height: 30px;
   margin-bottom: 20px;
   margin-top: -75px;
+}
+
+.sponsors {
+  text-align: center;
+  margin-top: 1%;
+}
+
+.indexSponsor {
+  margin: 2%;
+  width: 150px;
+  height: auto;
+}
+
+.indexTitleSponsor {
+  margin: 2%;
+  width: 250px;
+  height: auto;
 }
