Replaced Results with Past Results
Used accordion boxes for past results page. Change headers to reflect
name change

--- a/css/custom.css
+++ b/css/custom.css
@@ -346,7 +346,10 @@ input[type="radio"] {
 }
 
 .sponsorBar {
-  margin-bottom: 0px;
+  position: relative;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
   text-align: center;
 }
 
