--- a/css/custom.css
+++ b/css/custom.css
@@ -382,6 +382,14 @@ input[type="radio"] {
   text-align: center;
 }
 
+.sponsorBarResults {
+  position: absolute;
+  bottom:90px;
+  left: 0px;
+  width: 100%;
+  text-align: center;
+}
+
 .sponsorBarImg {
   margin: 1%;
   width: 75px;
