--- a/css/custom.css
+++ b/css/custom.css
@@ -42,8 +42,17 @@ html {
 	padding-top:6px !important;
   margin-top: 0px;
   padding-right: 1px !important;
-
 }
+
+.lclub {
+  padding-top:6px !important;
+  margin-top: 0px;
+  padding-right: 1px !important;
+  float: left;
+  height: 37px;
+  width: auto;
+}
+
 
 .twitter {
 	padding-top:7px !important;
@@ -117,7 +126,7 @@ html {
     margin-top: 12px;
     margin-bottom: 15px;
     border: none;
-    background-color: none !important;
+    background-color: transparent !important;
     padding: 0px;
 }
 
@@ -127,21 +136,21 @@ html {
   display: inline-block;
   visibility: hidden;
   opacity:0;
--webkit-transition: all 200ms ease-in;
--moz-transition: all 200ms ease-in;
--ms-transition: all 200ms ease-in;
--o-transition: all 200ms ease-in;
-transition: all 200ms ease-in;
+  -webkit-transition: all 200ms ease-in;
+  -moz-transition: all 200ms ease-in;
+  -ms-transition: all 200ms ease-in;
+  -o-transition: all 200ms ease-in;
+  transition: all 200ms ease-in;
 }
 
 .dropdown:hover .dropdown-menu{  /*Hover Dropwdown menu*/
   visibility: visible;
-    display: block;
-      opacity: 1;
+  display: block;
+  opacity: 1;
  }
 
  #image {
-     width: 100%;
+   width: 100%;
  }
 
 .footer {
@@ -158,9 +167,9 @@ transition: all 200ms ease-in;
 }
 
 .carousel-control.left, .carousel-control.right {
-	  background: none !important;
-	  filter: progid: none !important;
-	  outline: 0;
+	background: none !important;
+	filter: progid: none !important;
+	outline: 0;
  }
 
 .carousel .carousel-control {
@@ -196,38 +205,38 @@ span.error {
 /* Flexible iFrame */
 
 .Flexible-container {
-    position: relative;
-    padding-bottom: 56.25%;
-    padding-top: 30px;
-    height: 0;
-    overflow: hidden;
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
 }
 
 .Flexible-container iframe,
 .Flexible-container object,
 .Flexible-container embed {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .videowrapper {
-    float: none;
-    clear: both;
-    width: 100%;
-    position: relative;
-    padding-bottom: 56.25%;
-    padding-top: 25px;
-    height: 0;
+  float: none;
+  clear: both;
+  width: 100%;
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 25px;
+  height: 0;
 }
 .videowrapper iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .buildn {
@@ -239,7 +248,7 @@ span.error {
 }
 
 a.dropdown-toggle.navcol {
-color: #2B3E85 !important ;
+  color: #2B3E85 !important ;
 }
 
 .navcol:hover {
