--- a/css/custom.css
+++ b/css/custom.css
@@ -1,11 +1,19 @@
 @import url('http://netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.css');
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
+@import url(https://fonts.googleapis.com/css?family=Lato);
+@import url(https://fonts.googleapis.com/css?family=Merriweather);
+
 body {
     padding-top:50px;
     background-color:#FEFCFB;
     font-size:1.5em;
-    font-family:font-family: embrya,sans-serif;
+    font-family: 'Lato', sans-serif;
     font-weight:200;
     margin-bottom:30px;
+}
+
+h1 {
+  font-family: 'Montserrat', sans-serif;
 }
 
 html {
