--- a/css/custom.css
+++ b/css/custom.css
@@ -576,3 +576,18 @@ iframe {
   position: relative;
   top: -153px;
 }
+
+.img-large{
+  height: auto;
+  width: 500px;
+}
+
+.img-ml {
+  height: auto;
+  width: 200px;
+}
+
+.img-med {
+  height: auto;
+  width: 150px;
+}
