--- a/css/custom.css
+++ b/css/custom.css
@@ -30,6 +30,10 @@ background-color: #FFF;
 }
 /*slider   */
 
+.carousel-indicators {
+  width: 0%;
+}
+
 body {
     padding-top:50px;
     background-color:#FEFCFB;
