--- a/css/brand.css
+++ b/css/brand.css
@@ -12,14 +12,14 @@ iframe {
 }
 
 .logo {
-  max-width: 125px
+  max-width:125px;
 }
 
 .logo-rule {
   border:none;
   height:50px;
   background-color:#edac1a;
-  z-index:-1;
+  z-index:-10;
   position:relative;
   top:-102px;
 }
