--- a/css/brand.css
+++ b/css/brand.css
@@ -3,6 +3,25 @@ iframe {
   /*border-color:#e2e3e4;*/
 }
 
+html {
+  height: 100%;
+}
+
+body {
+  height: 100%;
+}
+
+.page {
+  min-height: 100%;
+  position: relative;
+}
+
+.content {
+  padding-bottom:100px;
+}
+
+.footer {
+}
 .nav-link {
   font-size: 1.5em;
 }
