--- a/css/custom.css
+++ b/css/custom.css
@@ -4,94 +4,93 @@
 @import url(https://fonts.googleapis.com/css?family=Merriweather);
 
 /*slider  */
-
 .carousel-indicators {
   height: 0px;
   width: 0px;
 }
-.main-text
-{
-position: absolute;
-top: 50px;
-width: 96.66666666666666%;
-color: #FFF;
-}
-.btn-min-block
-{
-min-width: 170px;
-line-height: 26px;
-}
-.btn-clear
-{
-color: #FFF;
-background-color: transparent;
-border-color: #FFF;
-margin-right: 15px;
-}
-.btn-clear:hover
-{
-color: #000;
-background-color: #FFF;
-}
-/*slider   */
 
+.main-text {
+  position: absolute;
+  top: 50px;
+  width: 96.66666666666666%;
+  color: #FFF;
+}
+
+.btn-min-block {
+  min-width: 170px;
+  line-height: 26px;
+}
+
+.btn-clear {
+  color: #FFF;
+  background-color: transparent;
+  border-color: #FFF;
+  margin-right: 15px;
+}
+
+.btn-clear:hover {
+  color: #000;
+  background-color: #FFF;
+}
+
+/*slider   */
 .carousel-indicators {
   width: 0%;
 }
 
 body {
-    padding-top:50px;
-    background-color:#FEFCFB;
-    font-size:1.5em;
-    font-family: 'Lato', sans-serif;
-    font-weight:200;
-    margin-bottom:30px;
-    height: 100%
+  padding-top: 50px;
+  background-color: #FEFCFB;
+  font-size: 1.5em;
+  font-family: 'Lato', sans-serif;
+  font-weight: 200;
+  margin-bottom: 30px;
+  height: 100%
 }
 
-h1  {
+h1 {
   font-family: 'Montserrat', sans-serif;
 }
 
 html {
-    position:relative;
-    min-height:100%
+  position: relative;
+  min-height: 100%
 }
 
 #map-canvas {
-	width:500px;
-	height:400px;
-	background-color: #CCC;
+  width: 500px;
+  height: 400px;
+  background-color: #CCC;
 }
 
 /* Navigation Bar */
-.navbar-nav{
-	float: right;
+.navbar-nav {
+  float: right;
 }
 
 .navbar-inverse {
-    background-color: rgba(255, 255, 255, 1);
+  background-color: rgba(255, 255, 255, 1);
 }
 
-.navbar-inverse .navbar-nav > li > a {
-    color: #2B3E85;
-    font-size: 1.6em;
+.navbar-inverse .navbar-nav>li>a {
+  color: #2B3E85;
+  font-size: 1.6em;
 }
 
 .navbar-inverse .navbar-brand {
-    color: #2B3E85;
-    font-size: 1.6em;
-    margin-top: -10px;
+  color: #2B3E85;
+  font-size: 1.6em;
+  margin-top: -10px;
 }
 
 .fbook {
-	padding-top:6px !important;
+  padding-top: 6px !important;
   margin-top: 0px;
   padding-right: 1px !important;
 }
 
 .lclub {
-  padding-top:6px !important;
+  padding-top: 6px !important;
   margin-top: 0px;
   padding-right: 1px !important;
   float: left;
@@ -100,72 +99,72 @@ html {
 }
 
 .twitter {
-	padding-top:7px !important;
+  padding-top: 7px !important;
   margin-top: 0px;
   padding-right: 0px !important;
 }
 
-.navbar-nav >li > a:focus, .navbar-inverse .navbar-nav>li>a:hover {
-	background-color:transparent !important;
-	color: #2B3E85 !important;
+.navbar-nav>li>a:focus, .navbar-inverse .navbar-nav>li>a:hover {
+  background-color: transparent !important;
+  color: #2B3E85 !important;
 }
 
 .navbar-fixed-bottom .navbar-collapse, .navbar-fixed-top .navbar-collapse {
-    max-height: 500px;
+  max-height: 500px;
 }
 
 .navbar-collapse.in {
   overflow-y: inherit !important;
   clip: rect(10px, 20px, 30px, 40px);
 }
+
 #bs-example-navbar-collapse-1 {
   clip: rect(10px, 20px, 30px, 40px);
 }
 
 /* Navigation Bar Hover Animation */
 .sliding-middle-out {
-	display: inline-block;
-	position: relative;
-	padding-bottom: 3px;
+  display: inline-block;
+  position: relative;
+  padding-bottom: 3px;
 }
 
 .sliding-middle-out:after {
-	content: '';
-	display: block;
-	margin: auto;
-	height: 3px;
-	width: 0px;
-	background: transparent;
-	transition: width .5s ease, background-color .5s ease;
+  content: '';
+  display: block;
+  margin: auto;
+  height: 3px;
+  width: 0px;
+  background: transparent;
+  transition: width .5s ease, background-color .5s ease;
 }
 
 .sliding-middle-out:hover:after {
-	width: 100%;
-	background: #2B3E85;
+  width: 100%;
+  background: #2B3E85;
 }
-
 
 @media screen and (max-width: 767px) {
   .navbar-nav {
-    float:right;
+    float: right;
     text-align: right;
   }
 
-  .navbar-inverse .navbar-nav > li > a {
-      color: #2B3E85;
-      font-size: 3em;
-      margin-top: 30px;
+  .navbar-inverse .navbar-nav>li>a {
+    color: #2B3E85;
+    font-size: 3em;
+    margin-top: 30px;
   }
 
   .fbook {
-  	padding-top:6px !important;
+    padding-top: 6px !important;
     margin-top: 0px;
     padding-right: 1px !important;
     float: left;
   }
 
   .twitter {
-  	padding-top:7px !important;
+    padding-top: 7px !important;
     margin-top: 0px;
     padding-right: 0px !important;
     float: left;
@@ -173,36 +172,36 @@ html {
 
   /* Navigation Bar Hover Animation */
   .sliding-middle-out {
-  	display: inline-block;
-  	position: relative;
-  	padding-bottom: 3px;
+    display: inline-block;
+    position: relative;
+    padding-bottom: 3px;
   }
 
   .sliding-middle-out:after {
-  	content: '';
-  	display: block;
-  	margin: auto;
-  	height: 0px;
-  	width: 0px;
+    content: '';
+    display: block;
+    margin: auto;
+    height: 0px;
+    width: 0px;
   }
 
   .sliding-middle-out:hover:after {
-  	width: 0%;
+    width: 0%;
   }
 }
 
 .navbar-toggle {
-    margin-top: 12px;
-    margin-bottom: 15px;
-    border: none;
-    background-color: transparent !important;
-    padding: 0px;
+  margin-top: 12px;
+  margin-bottom: 15px;
+  border: none;
+  background-color: transparent !important;
+  padding: 0px;
 }
 
-.dropdown .dropdown-menu{
+.dropdown .dropdown-menu {
   display: inline-block;
   visibility: hidden;
-  opacity:0;
+  opacity: 0;
   -webkit-transition: all 200ms ease-in;
   -moz-transition: all 200ms ease-in;
   -ms-transition: all 200ms ease-in;
@@ -210,69 +209,70 @@ html {
   transition: all 200ms ease-in;
 }
 
-.dropdown:hover .dropdown-menu{  /*Hover Dropwdown menu*/
+.dropdown:hover .dropdown-menu {
+  /*Hover Dropwdown menu*/
   visibility: visible;
   display: block;
   opacity: 1;
- }
+}
 
- #image {
-   width: 100%;
- }
+#image {
+  width: 100%;
+}
 
- .wrapper {
-   min-height: calc(100vh - 158px);
- }
+.wrapper {
+  min-height: calc(100vh - 158px);
+}
 
 .footer {
-	bottom: 0;
-	width: 100%;
-	/* Set the fixed height of the footer here */
-	height: 100px;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 100px;
   margin-top: 40px;
-	background-color: white !important;
-	border-top: 2px solid #CCC;
-	text-align: center;
-	font-weight: 200;
-	width: 100%;
+  background-color: white !important;
+  border-top: 2px solid #CCC;
+  text-align: center;
+  font-weight: 200;
+  width: 100%;
   display: inline-block;
 }
 
 .carousel-control.left, .carousel-control.right {
-	background: none !important;
-	filter: progid: none !important;
-	outline: 0;
- }
+  background: none !important;
+  filter: progid: none !important;
+  outline: 0;
+}
 
 .carousel .carousel-control {
-	visibility: hidden;
+  visibility: hidden;
 }
 
 .carousel:hover .carousel-control {
-	visibility: visible;
+  visibility: visible;
 }
 
 .small-footer {
-	text-align: center;
-	font-size: 1em;
-	font-weight: 200;
+  text-align: center;
+  font-size: 1em;
+  font-weight: 200;
   margin-top: 40px;
-	width: 100%;
-	background-color: #white !important;
+  width: 100%;
+  background-color: #white !important;
 }
 
 #email_validation, #name_validation {
-    display:none;
+  display: none;
 }
 
 label.required:after {
-	content:'*';
-	color:red;
+  content: '*';
+  color: red;
 }
 
 span.error {
-  background-color:#FFDFDF;
-  color:red;
+  background-color: #FFDFDF;
+  color: red;
 }
 
 /* Flexible iFrame */
@@ -314,14 +314,13 @@ span.error {
 
 .buildn {
   text-align: right;
-  font-size:1em;
-  color: rgb(192,192,192);
+  font-size: 1em;
+  color: rgb(192, 192, 192);
   margin-right: 10px;
-
 }
 
 a.dropdown-toggle.navcol {
-  color: #2B3E85 !important ;
+  color: #2B3E85 !important;
 }
 
 .navcol:hover {
@@ -339,7 +338,7 @@ li.dropdown:hover {
 @media (max-width: 1800px) {
   .navbar-nav .open .dropdown-menu {
     background-color: #fff;
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     line-height: 1.42857143;
     color: #333 !important;
     position: absolute;
@@ -358,10 +357,10 @@ li.dropdown:hover {
     -webkit-background-clip: padding-box;
     background-clip: padding-box;
     border: 1px solid #ccc;
-    border: 1px solid rgba(0,0,0,.15);
+    border: 1px solid rgba(0, 0, 0, .15);
     border-radius: 4px;
-    -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
-    box-shadow: 0 6px 12px rgba(0,0,0,.175);
+    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
   }
 }
 
@@ -382,7 +381,7 @@ h3, h4 {
   font-size: 1.1em;
 }
 
-.btn  {
+.btn {
   margin-top: 0.5%;
 }
 
@@ -391,7 +390,7 @@ h3, h4 {
   margin: 0 auto;
   background: #fff;
   transform: translateZ(0);
-  box-shadow: 0 1px 1px rgba(0,0,0,.1);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, .1);
 }
 
 input[type="radio"] {
@@ -429,7 +428,7 @@ input[type="radio"] {
 }
 
 .rules {
-  font-size:1.3em;
+  font-size: 1.3em;
 }
 
 /* Button Animation */
@@ -447,9 +446,12 @@ input[type="radio"] {
   font-weight: 700;
   outline: none;
   position: relative;
-  background: #2b3e85; /* Background Color*/
-  border: 1px solid #2b3e85; /* Border Color*/
-  color: #edac1a; /* Text Color*/
+  background: #2b3e85;
+  /* Background Color*/
+  border: 1px solid #2b3e85;
+  /* Border Color*/
+  color: #edac1a;
+  /* Text Color*/
   -webkit-transition: all 0.5s;
   -moz-transition: all 0.5s;
   transition: all 0.5s;
@@ -457,9 +459,12 @@ input[type="radio"] {
 }
 
 .btn1:hover {
-  background: #edac1a; /* Background Color*/
-  color: #2b3e85; /* Text Color*/
-  border: 1px solid #edac1a; /* Border Color*/
+  background: #edac1a;
+  /* Background Color*/
+  color: #2b3e85;
+  /* Text Color*/
+  border: 1px solid #edac1a;
+  /* Border Color*/
 }
 
 .horizbar {
@@ -504,7 +509,7 @@ input[type="radio"] {
 
 .sponsorBarResults {
   position: absolute;
-  bottom:90px;
+  bottom: 90px;
   left: 0px;
   width: 100%;
   text-align: center;
@@ -548,17 +553,18 @@ input[type="radio"] {
 }
 
 .carousel1 {
-    background: #2f4357;
-    margin-top: 20px;
+  background: #2f4357;
+  margin-top: 20px;
 }
 
 .carousel1 .item img {
-    margin: 0 auto; /* Align slide image horizontally center */
+  margin: 0 auto;
+  /* Align slide image horizontally center */
 }
 
 .bs-example1 {
   text-align: center;
-	margin: 20px;
+  margin: 20px;
   margin-left: auto;
   margin-right: auto;
   width: 100%;
@@ -570,7 +576,6 @@ iframe {
   width: 100%;
   height: 750px;
 }
-
 
 .fwb-logos {
   height: 70px;
@@ -599,7 +604,7 @@ iframe {
   top: -90px;
 }
 
-.img-large{
+.img-large {
   height: auto;
   width: 500px;
 }
